2008-04-10  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Fixed bug 368755: "MD should not guess if a
	  reference is managed or unmanaged relying on cflags"

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Use the new mime type extension to register new
	  file types.

2008-04-03  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/TagDatabaseManager.cs: Fixed mismatched single-quote.

2008-03-29  Marcos David Marín Amador <MarcosMarin@gmail.com>

	* Parser/Function.cs: No longer attempt to find prototypes.
	* Parser/TagDatabaseManager.cs: No longer generate prototype tags.
	* Gui/GeneralOptionsPanel.cs: changed completion for local variables
	  and memeber to on by default.

2008-03-29  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/*: Add best-guess completion for members and 
	(optionally, default off) local variables.

2008-03-21  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Instead of having the Include and Lib Paths
	  marked as ProjectPathItemProperty now mark them as regular
	  ItemProperties and instead added functionality to insert and parse
	  macros like ${ProjectDir} and ${CombineDir} in the Include and Lib
	  Paths.

2008-03-19  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/TagDatabaseManager.cs: Search project include paths 
	for relatively-pathed includes.

2008-03-18  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CTextEditorExtension.cs: Only smart-indent when smart-indenting
	  is enabled. Respect tabs/spaces setting.

2008-03-16  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs: Fix bug where the pauseCheckbox control could
	  be greyed out when it should be souldn't.

2008-03-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Insert into front of list instead of at the end,